Map substituted with Content in template1/2/3 panels

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,55 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "049d1a0b47a444679f93c2b3d7b871b0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df9a7195bf5947318ef048b4d56b78e6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Content(children=[Card(children=[Card(children=[Map(center=[50, 12], controls=(ZoomControl(options=['position'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "836cdce68622467c88d5cc33999b84eb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -66,7 +23,7 @@
     "\n",
     "%run Content.py\n",
     "\n",
-    "c = Content(output=output, splitmode=0)\n",
+    "c = Content(output=output, splitmode=1)\n",
     "#display(c.debug)\n",
     "display(c)\n",
     "display(c.configure())"
@@ -74,7 +31,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
+   "id": "e218a31d-3170-4a5b-83ed-35041942ef88",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5e47b3e-3546-44cf-aa5d-1ee05538a2bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.state = {'width': '50vw',\n",
+    " 'height': '50vh',\n",
+    " 'splitmode': 3,\n",
+    " 'leftwidthperc': 33,\n",
+    " 'topheightperc': 39,\n",
+    " 'borderwidth': 2,\n",
+    " 'linkedmaps': True,\n",
+    " 'color_first': 'red',\n",
+    " 'color_second': '#ffaa99',\n",
+    " 'dark': True,\n",
+    " 'content1': {'content': 'Map',\n",
+    "  'width': 'calc(calc(50vw * 0.330000) - 1px)',\n",
+    "  'height': 'calc(calc(50vh * 0.390000) - 1px)',\n",
+    "  'show_fullscreen': False,\n",
+    "  'show_coordinates': False,\n",
+    "  'show_search': False,\n",
+    "  'show_scale': False,\n",
+    "  'show_basemaps': False,\n",
+    "  'show_overview': False,\n",
+    "  'color_first': 'red',\n",
+    "  'color_second': '#ffaa99',\n",
+    "  'dark': True,\n",
+    "  'basemapindex': 0,\n",
+    "  'center': [50, 12],\n",
+    "  'zoom': 5.0},\n",
+    " 'content2': {'content': 'SVG Drawing',\n",
+    "  'width': 'calc(calc(50vw * 0.330000) - 1px)',\n",
+    "  'height': 'calc(calc(50vh * 0.610000) - 1px)',\n",
+    "  'color_first': 'red',\n",
+    "  'color_second': '#ffaa99',\n",
+    "  'dark': True,\n",
+    "  'familyname': 'sequential',\n",
+    "  'palette': 'Viridis'},\n",
+    " 'content3': {'content': 'Map',\n",
+    "  'width': 'calc(calc(50vw * 0.670000) - 1px)',\n",
+    "  'height': 'calc(50vh - 1px)',\n",
+    "  'show_fullscreen': True,\n",
+    "  'show_coordinates': True,\n",
+    "  'show_search': True,\n",
+    "  'show_scale': True,\n",
+    "  'show_basemaps': True,\n",
+    "  'show_overview': False,\n",
+    "  'color_first': 'red',\n",
+    "  'color_second': '#ffaa99',\n",
+    "  'dark': True,\n",
+    "  'basemapindex': 2,\n",
+    "  'center': [50, 12],\n",
+    "  'zoom': 5.0}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "efe26fd8-d97e-4abb-89c6-a8de740e7206",
    "metadata": {
     "tags": []
@@ -83,7 +111,20 @@
    "source": [
     "c.color_first  = 'red'\n",
     "c.color_second = '#ffaa99'\n",
+    "c.borderwidth = 2\n",
     "c.dark = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7544c703-0284-4da7-8cbc-d3c11d9de71d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.linkedmaps = True"
    ]
   },
   {
