--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96d54e79",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb5d174a3b7140f384ce55671e371211",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
@@ -34,6 +49,58 @@
     "\n",
     "# Open the page\n",
     "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf6e8fa7-aeef-4852-9a61-34e7856090fb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1b69ca246ef45a9be7379dd31443a9a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e1b3b5a-9a39-4cde-a992-4c72a2bd432d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5a1a7e54-9625-4568-aee9-550c15fbde98",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#p.content.card1children"
    ]
   },
   {
