--- a/src/vois/templates/template2panelsTest.ipynb
+++ b/src/vois/templates/template2panelsTest.ipynb
@@ -42,6 +42,28 @@
    "id": "629df0a3-a49f-4cea-8bda-9f1b14e3ecfe",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "p.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b0ba31a-6fa6-432e-98ad-95ed80b9363a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973fb09e-4416-442f-b8bc-a61f9d159d82",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
