--- a/src/vois/templates/template3panelsTest.ipynb
+++ b/src/vois/templates/template3panelsTest.ipynb
@@ -42,6 +42,28 @@
    "id": "1c972ab4-64b8-4b0d-86ec-c5dd611d84b0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "p.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f589a4ac-998a-4962-a9c8-80c0bbd5a6ca",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5338e901-1228-4a85-994b-b930e19f7ace",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
