Managed state and content.state in PageConfigurator

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,15 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6326922105664d4085dfa95572633ccb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "740c0231e30945ce90ae0d89815f9b77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Content(children=[Card(children=[HBox(children=(Card(children=[Map(center=[50, 12], controls=(ZoomControl(opti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e99e77c61bb441d89a5a081027b4131b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import settings\n",
+    "settings.dark_mode      = True\n",
+    "settings.color_first    = '#0d856d'\n",
+    "settings.color_second   = '#a0dcd0'\n",
+    "settings.button_rounded = True\n",
+    "\n",
     "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from IPython.display import display\n",
@@ -31,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e218a31d-3170-4a5b-83ed-35041942ef88",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.state"
+    "c.state = c.reset_state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a5e47b3e-3546-44cf-aa5d-1ee05538a2bd",
    "metadata": {
     "tags": []
