--- a/src/vois/vuetify/Tests/tabsTest.ipynb
+++ b/src/vois/vuetify/Tests/tabsTest.ipynb
@@ -4,12 +4,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fcf77851",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run tabs.py\n",
+    "%run ../tabs.py\n",
     "\n",
     "from ipywidgets import widgets\n",
+    "\n",
+    "debug = widgets.Output()\n",
+    "display(debug)\n",
     "\n",
     "output0 = widgets.Output()\n",
     "output1 = widgets.Output()\n",
@@ -20,12 +25,13 @@
     "with output2: print('This is output 2')\n",
     "\n",
     "def onchange(value):\n",
-    "    print(value)\n",
+    "    with debug:\n",
+    "        print(value)\n",
     "\n",
     "t = tabs(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'],\n",
     "         contents=[output0,output1,output2],\n",
     "         tooltips=['Tooltip for label1'],\n",
-    "         onchange=onchange, row=False, dark=False)\n",
+    "         onchange=onchange, row=True, dark=False)\n",
     "\n",
     "display(t.draw())"
    ]
@@ -64,6 +70,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "09d7440f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t.color = 'red'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d70b9b1-3318-4ae1-b56c-3010f98e58f7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -85,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
