--- a/src/vois/templates/PlotlyChartTest.ipynb
+++ b/src/vois/templates/PlotlyChartTest.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c718b0bf1f748068702a60d59c3c96f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "PlotlyChart(children=[Card(children=[Output(layout=Layout(height='300px', width='500px'))], flat=True, height=…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%run PlotlyChart.py\n",
     "\n",
@@ -17,19 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "740f50d1-1427-49ee-9125-991882c6d0c7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0bc89c04c0754882b077b6ea0b188df7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[VBox(children=(Html(children=['Plotly chart'], class_='pa-0 ma-0 mt-1 mr-3', layout=None, style…"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pc.configure()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "54fbdfc1-a601-4134-b789-3e2e0e60a09d",
    "metadata": {
     "tags": []
@@ -45,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9bfb48e-ff83-4c83-bd6d-3602e3c11770",
    "metadata": {},
    "outputs": [],
@@ -56,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "404af5fe-1fcd-4b25-a978-bbf6b1f845af",
    "metadata": {},
    "outputs": [],
@@ -66,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "64dcfc84-f139-4709-b093-d63cca3eafca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc.color_first = 'red'"
+    "pc.color_first = 'green'"
    ]
   },
   {
