Enhanced usability of generated code + added samplePage

--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6326922105664d4085dfa95572633ccb",
+       "model_id": "e33c6ccf948841f2ab77c1581572e27b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "740c0231e30945ce90ae0d89815f9b77",
+       "model_id": "956a2ddaa4674f339cd9279884e1a9ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e99e77c61bb441d89a5a081027b4131b",
+       "model_id": "bdba13f32a7d45cd97f4cd2e66f6ba91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,6 +77,37 @@
     "#display(c.debug)\n",
     "display(c)\n",
     "display(c.configure())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "98d1ae0c-b719-4348-9c6c-020dbd0dc79c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'map'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run ../development/load_local_vois.py -w\n",
+    "from vois.geo import Map\n",
+    "\n",
+    "m = Map.Map()\n",
+    "dnames = {\n",
+    "    Map.Map: 'map',\n",
+    "}\n",
+    "\n",
+    "dnames[type(m)]"
    ]
   },
   {
