Added utility functions to svgMap

--- a/src/vois/svgMapTest.ipynb
+++ b/src/vois/svgMapTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c1236b41",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cf299f1126c4e09b3ff3d1bb6d1562a",
+       "model_id": "f7dd63ff17db4c2284c71efc01069600",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,14 +49,74 @@
     "#colorlist = ['#440154', '#482878', '#3e4989', '#31688e', '#26828e', '#1f9e89', '#35b779', '#6ece58', '#b5de2b', '#fde725'] # Viridis\n",
     "colorlist = ['#0d0887', '#46039f', '#7201a8', '#9c179e', '#bd3786', '#d8576b', '#ed7953', '#fb9f3a', '#fdca26', '#f0f921'] # Plasma\n",
     "#colorlist = [rgb(36, 86, 104), rgb(15, 114, 121), rgb(13, 143, 129), rgb(57, 171, 126), rgb(110, 197, 116), rgb(169, 220, 103), rgb(237, 239, 93)]\n",
-    "display(HTML(svgMapEurope(df, code_column='iso2code', codes_selected=['IT','SE','PL'], stroke_selected='red', colorlist=colorlist, stdevnumber=1.5, onhoverfill='#f8bd1a', \n",
-    "                          width='40vw', height='60vh', stroke_width=3.0, hoveronempty=False, legendtitle='Legent title', legendunits='KTOE per 100K inhabit.')))"
+    "svg = svgMapEurope(df, code_column='iso2code', codes_selected=['IT','SE','PL'], stroke_selected='red', colorlist=colorlist, stdevnumber=1.5, onhoverfill='#f8bd1a', \n",
+    "                   width='30vw', height='45vh', stroke_width=3.0, hoveronempty=False, legendtitle='Legent title', legendunits='KTOE per 100K inhabit.')\n",
+    "\n",
+    "svg = svgChangeWidth( svg, '50vw')\n",
+    "svg = svgChangeHeight(svg, '60vh')\n",
+    "\n",
+    "display(HTML(svg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "737d6fd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbe718059f424de9b71c9ce4b4735e19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg\\n   xmlns:svg=\"http://www.w3.org/2000/svg\"\\n   xmlns=\"http://www.w3.org/2000/svg\"\\n   width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "svg = svgChangeWidth(svg, '15vw')\n",
+    "svg = svgChangeHeight(svg, '20vh')\n",
+    "\n",
+    "display(HTML(svg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "578d44f5-9d79-403b-b015-74dfd759f980",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e312c51094f441c28fd3d7acc2eda4c8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<svg\\n   xmlns:svg=\"http://www.w3.org/2000/svg\"\\n   xmlns=\"http://www.w3.org/2000/svg\"\\n   width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(HTML(svg))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737d6fd6",
+   "id": "e15bee76-aa32-4e66-803b-cbbf4a756079",
    "metadata": {},
    "outputs": [],
    "source": []
