--- a/src/vois/templates/ContentTest.ipynb
+++ b/src/vois/templates/ContentTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "3866cb33-b425-4c1c-9d70-ec32c31a94ed",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e33c6ccf948841f2ab77c1581572e27b",
+       "model_id": "65599cc5199d417eae193a86e31fa29f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,26 +25,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "956a2ddaa4674f339cd9279884e1a9ba",
+       "model_id": "cc4d100409f54041ba2082be6ebcdc52",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Content(children=[Card(children=[HBox(children=(Card(children=[Map(center=[50, 12], controls=(ZoomControl(opti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdba13f32a7d45cd97f4cd2e66f6ba91",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Card(children=[VBox(children=(Html(layout=None, style_='width:  0px; height: 10px;', tag='div'), HBox(children…"
+       "Content(children=[Card(children=[HBox(children=(VBox(children=(Card(children=[Map(center=[50, 12], controls=(Z…"
       ]
      },
      "metadata": {},
@@ -73,16 +59,27 @@
     "\n",
     "%run Content.py\n",
     "\n",
-    "c = Content(output=output, splitmode=1)\n",
+    "#c = Content(output=output, splitmode=1)\n",
+    "\n",
+    "c = Content(output=output)\n",
+    "\n",
+    "# Read the state of the page from the .json file\n",
+    "import json\n",
+    "with open('Test/samplePage.json') as f:\n",
+    "    state = json.load(f)\n",
+    "    if 'content' in state:\n",
+    "        c.state = state['content']\n",
+    "\n",
+    "\n",
     "#display(c.debug)\n",
     "display(c)\n",
-    "display(c.configure())"
+    "#display(c.configure())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "98d1ae0c-b719-4348-9c6c-020dbd0dc79c",
+   "execution_count": 6,
+   "id": "82167e02-6512-4e28-9f01-a734f2dff3e8",
    "metadata": {
     "tags": []
    },
@@ -90,41 +87,109 @@
     {
      "data": {
       "text/plain": [
-       "'map'"
+       "'calc(calc(100vw - 400px) * 0.500000)'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run ../development/load_local_vois.py -w\n",
-    "from vois.geo import Map\n",
-    "\n",
-    "m = Map.Map()\n",
-    "dnames = {\n",
-    "    Map.Map: 'map',\n",
-    "}\n",
-    "\n",
-    "dnames[type(m)]"
+    "c.card1children.width"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "e218a31d-3170-4a5b-83ed-35041942ef88",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'splitmode': 0,\n",
+       " 'leftwidthperc': 50,\n",
+       " 'topheightperc': 50,\n",
+       " 'borderwidth': 2,\n",
+       " 'linkedmaps': False,\n",
+       " 'color_first': '#0d856d',\n",
+       " 'color_second': '#a0dcd0',\n",
+       " 'dark': True,\n",
+       " 'content1': {'content': 'Map',\n",
+       "  'show_fullscreen': True,\n",
+       "  'show_coordinates': True,\n",
+       "  'show_search': True,\n",
+       "  'show_scale': True,\n",
+       "  'show_basemaps': True,\n",
+       "  'show_overview': False,\n",
+       "  'color_first': '#0d856d',\n",
+       "  'color_second': '#a0dcd0',\n",
+       "  'dark': True,\n",
+       "  'basemapindex': 0,\n",
+       "  'center': [50, 12],\n",
+       "  'zoom': 5.0}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c.state = c.reset_state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
+   "id": "c65c80b9-e813-4274-bdc3-6928cb724f2e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'splitmode': 0,\n",
+       " 'leftwidthperc': 50,\n",
+       " 'topheightperc': 50,\n",
+       " 'borderwidth': 2,\n",
+       " 'linkedmaps': False,\n",
+       " 'color_first': '#0d856d',\n",
+       " 'color_second': '#a0dcd0',\n",
+       " 'dark': True,\n",
+       " 'content1': {'content': 'Map',\n",
+       "  'width': '50vw',\n",
+       "  'height': '50vh',\n",
+       "  'show_fullscreen': True,\n",
+       "  'show_coordinates': True,\n",
+       "  'show_search': True,\n",
+       "  'show_scale': True,\n",
+       "  'show_basemaps': True,\n",
+       "  'show_overview': False,\n",
+       "  'color_first': '#0d856d',\n",
+       "  'color_second': '#a0dcd0',\n",
+       "  'dark': True,\n",
+       "  'basemapindex': 0,\n",
+       "  'center': [50, 12],\n",
+       "  'zoom': 5.0}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.reset_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "a5e47b3e-3546-44cf-aa5d-1ee05538a2bd",
    "metadata": {
     "tags": []
