--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b822bbc8",
+   "id": "8af4f435",
    "metadata": {
     "tags": []
    },
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d1c85d4fe7c4c9693cb95a26d1508f9",
+       "model_id": "bd58aa5b5fe84a788af3f082982c1d9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd1fe8afd83f4a86bcb9893a663fe3da",
+       "model_id": "9ba61c3276ba403c843c0113c435aaf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d62364-8115-46ba-a70e-87c5ae9133a4",
+   "id": "62992d5a",
    "metadata": {
     "tags": []
    },
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1be56da-db22-4ff6-b7d2-958f34c2b89c",
+   "id": "f0e90f64",
    "metadata": {
     "tags": []
    },
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0186103d-de38-453a-b678-451ef30db04d",
+   "id": "fa4604f7",
    "metadata": {
     "tags": []
    },
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a115707f-19c6-4b2b-aeee-48c682107554",
+   "id": "17c79b32",
    "metadata": {
     "tags": []
    },
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5114fe-2a19-4a82-8596-2139ae66c6d1",
+   "id": "cb55b573",
    "metadata": {
     "tags": []
    },
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e3d8f0-cc75-40e2-979c-78b5fb6c4773",
+   "id": "8fe6c908",
    "metadata": {
     "tags": []
    },
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd06eb7f-f401-4bba-930f-feffd34322b4",
+   "id": "88014a9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2635be-63fa-4808-9349-abf1853f7d90",
+   "id": "19ec77fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,9 +211,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
