--- a/src/vois/templates/Test/samplePage.ipynb
+++ b/src/vois/templates/Test/samplePage.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "65d32196-829e-41b9-a4e4-bdb6381998e9",
+   "id": "428be991",
    "metadata": {
     "tags": []
    },
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fedccc8f-08b3-47b6-b845-8cedf3689ff0",
+   "id": "e900da36",
    "metadata": {
     "tags": []
    },
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0744b022-8b62-4f66-9fc9-5786302aa881",
+   "id": "e9a17b99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,9 +167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [interapro_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-interapro_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -181,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
