--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -30,26 +30,14 @@
     "debug = widgets.Output()\n",
     "display(debug)\n",
     "\n",
-    "def onclick(lon,lat):\n",
+    "def onclick(lon,lat,zoom):\n",
     "    with debug:\n",
-    "        print(lon,lat)\n",
+    "        print(lon,lat,zoom)\n",
     "\n",
     "# Create the page\n",
     "%run Map.py\n",
     "m = Map(show_overview=False, show_coordinates=True, basemapindex=1, onclick=onclick)\n",
     "m.draw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5aacb017-3568-47ce-b403-66a646644421",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "m.onclick"
    ]
   },
   {
