Added IconClipboard widget

--- a/src/vois/cssUtilsTest.ipynb
+++ b/src/vois/cssUtilsTest.ipynb
@@ -25,8 +25,20 @@
    "source": [
     "%run cssUtils.py\n",
     "\n",
-    "copyToClipboard('aaa bbb ccc ddd')"
+    "import ipywidgets as widgets\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "copyToClipboard('aaa bbb ccc ddd', output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa11418e-c2e1-4068-80db-ec7a1cd5e78d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -89,7 +101,7 @@
     "def mybtn_event_handler(b):\n",
     "    with output:\n",
     "        display(HTML(\"<script>navigator.clipboard.writeText('Emanuele De Marchi')</script>\"))\n",
-    "        display(Javascript('''console.log(\"Success\");'''))\n",
+    "        #display(Javascript('''console.log(\"Success\");'''))\n",
     "\n",
     "mybtn.on_click(mybtn_event_handler)"
    ]
@@ -97,7 +109,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf779d7b",
+   "id": "7981e7ef-bb67-4895-a773-b0f08f79d3ba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, HTML\n",
+    "from vois.vuetify import iconButton\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "def onclick(*args):\n",
+    "    with output:\n",
+    "        display(HTML(\"<script>navigator.clipboard.writeText('Emanuele De Marchi')</script>\"))\n",
+    "\n",
+    "b = iconButton.iconButton(icon='mdi-content-copy', color='green', onclick=onclick, tooltip='Click to copy text to the clipboard')\n",
+    "b.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91f8ed7-9dc9-4692-a27b-37e6edd5d338",
    "metadata": {},
    "outputs": [],
    "source": []
