--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -142,6 +142,14 @@ iconButton widget
 
 .. image:: figures/line.png
 
+iconClipboard widget
+--------------------
+
+.. automodule:: iconClipboard
+    :members:
+
+.. image:: figures/line.png
+
 label widget
 ------------
 
