Updated mainPage to use a new local widget buttonCard

--- a/src/vois/vuetify/Tests/mainPageTest.ipynb
+++ b/src/vois/vuetify/Tests/mainPageTest.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "906ee21e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run mainPage.py\n",
+    "%run ../mainPage.py\n",
     "\n",
     "from random import randrange\n",
     "from ipywidgets import widgets\n",
@@ -35,12 +37,12 @@
     "             disclaimer=disclaimer)\n",
     "\n",
     "m.addButton('Function 1',\n",
-    "            #subtitle='Launch calculation of ...',\n",
+    "            subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
     "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
     "            onclick=onclick1)\n",
     "\n",
-    "for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000))\n",
+    "for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000), subtitle='All other buttons', tooltip='Tooltip text to display on hover')\n",
     "\n",
     "m.open()"
    ]
@@ -49,7 +51,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bc2e8426",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Basic multi-page app\n",
@@ -122,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
