--- a/src/vois/templates/MainConfiguratorTest.ipynb
+++ b/src/vois/templates/MainConfiguratorTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b822bbc8",
+   "execution_count": 20,
+   "id": "96d54e79",
    "metadata": {
     "tags": []
    },
@@ -11,21 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2b2c687aecb44a68b7d557776588815",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d89c54876ae41ef89df030668b8f030",
+       "model_id": "9dc3e7cf87b54f2bb5ecc7536fc81dde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,33 +24,32 @@
     }
    ],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from ipywidgets import widgets, HTML, Layout\n",
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
     "settings.color_first    = '#0d856d'\n",
     "settings.color_second   = '#a0dcd0'\n",
     "settings.button_rounded = True\n",
     "\n",
-    "from ipywidgets import widgets, HTML, Layout\n",
-    "from IPython.display import display\n",
-    "\n",
-    "from vois import download, cssUtils\n",
-    "display(download.output)\n",
-    "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
     "\n",
-    "cssUtils.allSettings(output)\n",
-    "cssUtils.switchFontSize(output,14)\n",
+    "# Create the page\n",
+    "%run MainConfigurator.py\n",
+    "p = MainConfigurator(output)\n",
+    "card = p.create()\n",
     "\n",
-    "from vois.templates import PageConfigurator\n",
-    "\n",
-    "c = PageConfigurator.PageConfigurator(output)"
+    "# Open the page\n",
+    "p.open()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43be4fd7-d9d8-44bf-89aa-8d5c8c6a9bf9",
+   "id": "59d7b602-f239-40a2-97bb-e02971fd9b92",
    "metadata": {},
    "outputs": [],
    "source": []
