--- a/src/vois/vuetify/Tests/sliderTest.ipynb
+++ b/src/vois/vuetify/Tests/sliderTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8e0cc537-a439-4b7a-a5fa-d3d956253193",
    "metadata": {
     "tags": []
@@ -15,27 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d97bec69",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c293cc1dcc5945079723196b298796ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(width='400px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vois.vuetify import slider\n",
     "from ipywidgets import HTML, widgets, Layout\n",
@@ -49,12 +34,12 @@
     "s = slider.slider(2015, 2010,2021, onchange=onchange, vertical=True, height=280, width=150)\n",
     "\n",
     "with output:\n",
-    "    display(s.draw())"
+    "    display(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d7329d1d",
    "metadata": {
     "tags": []
@@ -66,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c64deb1e",
    "metadata": {
     "tags": []
@@ -86,54 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4d7d7816-d288-4f96-bb19-8ff8521371da",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1fb926308be466784357024808f401a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "slider(children=[Slider(class_='pa-0 ma-0 ml-5 mr-5 mt-n2 mb-n12', color='#f8bd1a', dense=True, height=250.0, …"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_slider_1.draw()"
+    "my_slider_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8d9b3ad5-7323-40ab-a7c7-1883ba425c77",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a2b70feca674be5beab212a3c802e2f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "slider(children=[Slider(class_='pa-0 ma-0 ml-n12 mr-n12 mt-n9 mb-n10', color='#f8bd1a', dense=True, height=350…"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "edo = slider.slider(selectedvalue=44 + 1, \n",
     "                            minvalue=10, \n",
@@ -144,8 +99,16 @@
     "                            step=1.5,\n",
     "                    height=350, \n",
     "                            )\n",
-    "edo.draw()"
+    "edo"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff375eda-5252-4ffa-acc3-4564b481ce17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
