Skeleton of MainConfigurator

--- a/src/vois/vuetify/Tests/selectImageTest.ipynb
+++ b/src/vois/vuetify/Tests/selectImageTest.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "96b0027b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "783dbc205fc54a5f914b2048edb13a59",
+       "model_id": "73f61cf797f64743a08e7d0c890678a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71e40e0cca79457488ef743d207f7c44",
+       "model_id": "e3472195f3714b5b946129359d5cbeee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +40,7 @@
    "source": [
     "import ipyvuetify as v\n",
     "\n",
-    "%run selectImage.py\n",
+    "%run ../selectImage.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -58,6 +60,69 @@
     "]\n",
     "\n",
     "s = selectImage(images=images, selection=1, onchange=onchange, \n",
+    "                label='Please select an image from the list', \n",
+    "                max_height=44, dense=True, width=\"450px\",\n",
+    "                outlined=True, clearable=True, margins=\"ma-0 mt-2 mr-1\")\n",
+    "\n",
+    "display(s)\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dc084cf4-6671-450d-b302-be334ac2b20a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8663bd49f47843afa1649890ba16f917",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "selectImage(events=['input'], images=[{'name': 'Image 0', 'image': 'https://jeodpp.jrc.ec.europa.eu/services/s…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c580001b59ea4a65b9c853ce0b7785bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipyvuetify as v\n",
+    "\n",
+    "%run ../selectImage.py\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange():\n",
+    "    with output:\n",
+    "        print(s.value)\n",
+    "\n",
+    "        \n",
+    "images = [{ \"name\": 'Image %d'%x, \"image\": 'https://jeodpp.jrc.ec.europa.eu/services/shared/wallpapers/%d.jpg'%x,  \"max_width\": 200,  \"max_height\": 150 } for x in range(61)]\n",
+    "\n",
+    "s = selectImage(images=images, selection=0, onchange=onchange, \n",
     "                label='Please select an image from the list', \n",
     "                max_height=44, dense=True, width=\"450px\",\n",
     "                outlined=True, clearable=True, margins=\"ma-0 mt-2 mr-1\")\n",
@@ -128,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
